2008-08-07 [colin]	0.7.3cvs3

	* src/synce_comp.c
		Undeprecate

2008-07-31 [colin]	0.7.3cvs2

	* src/synce_gtk.c
		Fix warning

2008-07-29 [colin]	0.7.3cvs1

	* src/synce_gtk.c
		Switch the main menu to GtkUIManager

2007-11-19 [paul]	0.7.3

	0.7.3 released

2007-10-09 [wwp]	0.7.2cvs2

	* configure.ac
		Bumped required Claws Mail version to 3.0.2cvs44,
		addressbook API changes.

	* src/synce_comp.c
		Updated to match the new addressbook API changes (pass
		a pointer to picture - here, NULL - to the contact creation
		function).

	* src/.cvsignore
		Ignore more temp generated files.

2007-10-04 [colin]	0.7.2cvs1

	* src/synce_comp.c
		Verify success on writes

2007-09-03 [paul]	0.7.2

	0.7.2 released

2007-08-22 [holger]	0.7.1cvs3

	* COPYING
	* NEWS
	* src/synce_comp.c
	* src/synce_comp.h
	* src/synce_gtk.c
	* src/synce_gtk.h
	* src/synce_plugin.c
	* src/synce_rapi.c
	* src/synce_rapi.h
		Change license to GPLv3 or later

2007-08-16 [paul]	0.7.1cvs2

	* configure.ac
		use pkgconfig to check for gtk and glib

2007-07-11 [colin]	0.7.1cvs1

	* src/synce_plugin.c
		Specify license better (GPL2+)

2007-07-03 [paul]	0.7.1

	0.7.1 released

2007-06-21 [colin]	0.7.0cvs1

	* src/synce_plugin.c
		Update plugin API

2007-02-26 [paul]	0.7

	0.7 released

2007-02-10 [colin]	0.6.6cvs3

	* Makefile.am
		Fix make dist tarball

2007-02-09 [colin]	0.6.6cvs2

	* autogen.sh
	* configure.ac
	* m4/Makefile.am
	* m4/librapi2.m4
	* m4/libsynce.m4
		Add compatibility stuff for old distros
		Should work on bleeding-edge ones too ;)

2007-02-09 [paul]	0.6.6cvs1

	* configure.ac
		update for upstream changes

2007-01-09 [paul]	0.6.6

	0.6.6 released

2006-12-15 [ticho]	0.6.5cvs1

	* configure.ac
	* src/synce_plugin.c
		Use check_plugin_version() for version check.

2006-12-04 [paul]	0.6.5

	0.6.5 released

2006-11-28 [paul]	0.6.4cvs3

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	0.6.4cvs2

	* README