@@ -7,7 +7,7 @@ dnl plugin version
 MAJOR_VERSION=0
 MINOR_VERSION=7
 MICRO_VERSION=3
-EXTRA_VERSION=3
+EXTRA_VERSION=4
 
 CFLAGS="$CFLAGS -Wall"
 if test $USE_MAINTAINER_MODE = yes; then
