@@ -1,3 +1,9 @@
+2008-08-17 [colin]	0.7.3cvs4
+
+	* src/synce_comp.c
+	* src/synce_rapi.c
+		Warning fix
+
 2008-08-07 [colin]	0.7.3cvs3
 
 	* src/synce_comp.c
